<resources>
    <!--Common strings-->
    <string name="app_name">QuizApp</string>
    <string name="play_button_text">Играть</string>
    <string name="stats_button_text">Статистика</string>
    <string name="exit_button_text">Выйти</string>
    <string name="submit_button_text">Подтвердить</string>
    <string name="save_button_text">Сохранить</string>
    <string name="main_menu_image_desc">Логотип главного меню</string>
    <string name="settings_button_text">Настройки</string>
    <string name="yes_text">Да</string>
    <string name="no_text">Нет</string>

    <!--Close app AlertDialog strings-->
    <string name="confirmation_title_text">Подтверждение</string>
    <string name="confirmation_close_app_msg_text">Вы действительно хотите выйти?</string>
    <string name="confirmation_reset_stats_msg_text">Вы дейстительно хотите сбросить прогресс?</string>
    <string name="your_name_hint_text">Ваше имя</string>
    <string name="enter_your_name_text">Введите ваше имя</string>
    <string name="end_game_text">Конец игры</string>
    <string name="congratulation_text">Поздравляем!</string>
    <string name="image_cont_desc">image</string>
    <string name="name_title_text">Имя</string>
    <string name="scores_title_text">Количество очков</string>
    <string name="loading_data_text">Идёт загрузка…</string>
    <string name="reset_progress_text">Сбросить прогресс</string>
</resources>
